syntax = "proto3";

package io.brown;

option java_multiple_files = true;
option java_outer_classname = "GreetingProto";

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

// The greeting service definition.
service GreetingService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {
  }
}